--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 home = "0.5.4"
 clap = {version = "4.1.8", features = [ "derive" ]}
+anyhow = "1.0.69"
+colored = "2.0.0"
 
 [[bin]]
 name = "sk"
