Changed name from skelly to skely :(

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
-name = "skelly"
+name = "skely"
 version = "0.1.0"
 authors = ["Lucas Newcomb <pantsbabyy@gmail.com>"]
 description = """
 A simple command line tool for using and managing skeleton projects
 """
-documentation = "https://github.com/pants721/skelly"
-homepage = "https://github.com/pants721/skelly"
-repository = "https://github.com/pants721/skelly"
+documentation = "https://github.com/pants721/skely"
+homepage = "https://github.com/pants721/skely"
+repository = "https://github.com/pants721/skely"
 keywords = ["cli"]
 categories = ["command-line-utilities"]
 edition = "2021"
