--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ home = "0.5.4"
 clap = {version = "4.1.8", features = [ "derive" ]}
 anyhow = "1.0.69"
 colored = "2.0.0"
+serde = {version = "1.0.152", features = [ "derive" ]}
+toml = "0.7.2"
 
 [[bin]]
 name = "sk"
