--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,17 +16,17 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-home = "0.5.4"
-clap = {version = "4.1.8", features = [ "derive" ]}
-anyhow = "1.0.69"
-colored = "2.0.0"
-serde = {version = "1.0.152", features = [ "derive" ]}
-toml = "0.7.2"
+home = "^0.5.5"
+clap = {version = "^4.3.21", features = [ "derive" ]}
+anyhow = "^1.0.72"
+colored = "^2.0.4"
+serde = {version = "^1.0.183", features = [ "derive" ]}
+toml = "^0.7.6"
 
 [dev-dependencies]
-assert_cmd = "2.0.8"
-predicates = "2.1.5"
-assert_fs = "1.0.10"
+assert_cmd = "^2.0.12"
+predicates = "^2.1.5"
+assert_fs = "^1.0.13"
 
 [[bin]]
 name = "sk"
